Bug 496613 - Severed relationship event is missing text
Summary: Severed relationship event is missing text
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Joshua Goins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-23 17:43 UTC by Joshua Goins
Modified: 2024-11-27 21:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joshua Goins 2024-11-23 17:43:01 UTC
On Mastodon, it says "An admin from mastodon.art has blocked regenerate.social, including 0 of your followers and 1 account you follow." but in Tokodon it says "0 relationships were severed due to moderation actions". This is wrong, obviously.
Comment 1 Joshua Goins 2024-11-27 21:51:17 UTC
Git commit 06fa773b52c74c2ee87165b75e3c6729021c17cb by Joshua Goins.
Committed on 27/11/2024 at 21:50.
Pushed by redstrate into branch 'release/24.12'.

Fix parsing of severance events, moderation warnings and more

My initial implementation was wrong, my understanding of the event's
JSON were completely off.
(cherry picked from commit 0048b98e2bf02bdf8375d29b507db53080259eba)

M  +5    -4    src/autotests/data/notifications.json
M  +6    -5    src/timeline/notification.cpp
M  +2    -1    src/timeline/notification.h

https://invent.kde.org/network/tokodon/-/commit/06fa773b52c74c2ee87165b75e3c6729021c17cb
Comment 2 Joshua Goins 2024-11-27 21:54:49 UTC
Git commit 0cb388dd1bda974cbed630baf9d96c4300192ca2 by Joshua Goins.
Committed on 27/11/2024 at 21:47.
Pushed by redstrate into branch 'master'.

Add a better string for severance events

Ripped off what Mastodon Web says, like breaking it down by
follows/followers.

M  +4    -1    src/content/ui/Notifications/RelationshipSeveranceDelegate.qml
M  +7    -2    src/timeline/notification.cpp
M  +4    -2    src/timeline/notification.h

https://invent.kde.org/network/tokodon/-/commit/0cb388dd1bda974cbed630baf9d96c4300192ca2
Comment 3 Joshua Goins 2024-11-27 21:54:57 UTC
Git commit 0048b98e2bf02bdf8375d29b507db53080259eba by Joshua Goins.
Committed on 27/11/2024 at 21:42.
Pushed by redstrate into branch 'master'.

Fix parsing of severance events, moderation warnings and more

My initial implementation was wrong, my understanding of the event's
JSON were completely off.

M  +5    -4    src/autotests/data/notifications.json
M  +6    -5    src/timeline/notification.cpp
M  +2    -1    src/timeline/notification.h

https://invent.kde.org/network/tokodon/-/commit/0048b98e2bf02bdf8375d29b507db53080259eba