Add a better string for severance events

Ripped off what Mastodon Web says, like breaking it down by
follows/followers.

BUG: 496613